# compute-aggregation-layer

./: .clang-format  .config  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE.md  LIMITATIONS.md  README.md  file_to_str.cmake  os_release_info.cmake
client/icd/: CMakeLists.txt  get_all_extension_function_address.cpp  get_all_extension_function_address.h  icd_global_state.cpp  icd_global_state.h  icd_kernel_arg_cache.h  icd_ocl.cpp  icd_ocl.h  icd_page_fault_manager.h
client/icd/level_zero/: CMakeLists.txt  icd_level_zero.cpp  icd_level_zero.h  icd_level_zero_table_exports.cpp
client/icd/level_zero/api_customization/: icd_level_zero_api.h  icd_level_zero_api_command_list.cpp  icd_level_zero_api_command_queue.cpp  icd_level_zero_api_customization.cpp  icd_level_zero_api_device.cpp  icd_level_zero_api_driver.cpp  icd_level_zero_api_event.cpp  icd_level_zero_api_event_pool.cpp  icd_level_zero_api_kernel.cpp  icd_level_zero_api_memory.cpp  icd_level_zero_api_memory_experimental.cpp  icd_level_zero_api_module.cpp  icd_level_zero_api_pnext_translation.cpp  icd_level_zero_api_sysman.cpp  icd_level_zero_api_sysman.h  icd_level_zero_api_tools.cpp  icd_level_zero_api_tools.h  icd_level_zero_api_tracing.cpp  icd_level_zero_api_tracing.h  icd_level_zero_ipc_helpers.h
client/icd/level_zero/api_type_wrapper/: device_wrapper.cpp  device_wrapper.h  handles_definitions.h  kernel_wrapper.h  module_wrapper.cpp  module_wrapper.h  wrapper_base.h
client/icd/level_zero/debugger/: debugger.h  debugger_imp.cpp
client/icd/level_zero/logic/: hostptr_copies_reader.cpp  hostptr_copies_reader.h  imported_host_pointers_manager.cpp  imported_host_pointers_manager.h  properties_cache.h  struct_traits.h  types_printer.h
client/icd/level_zero/tracing/: tracing.h  tracing_imp.cpp  tracing_imp.h  (+2 more)
icd/: CMakeLists.txt  icd_global_state.cpp  icd_global_state.h  icd_kernel_arg_cache.h  icd_level_zero.cpp  icd_level_zero.h  icd_level_zero_table_exports.cpp  icd_malloc_override.cpp  icd_malloc_override.h  icd_malloc_override_entry.cpp  icd_ocl.cpp  icd_ocl.h  icd_page_fault_manager.h  icd_platform.cpp  icd_platform.h
icd/level_zero/: CMakeLists.txt  icd_level_zero.cpp  icd_level_zero.h
icd/level_zero/api_customization/: icd_level_zero_api.h  icd_level_zero_api_command_list.cpp  icd_level_zero_api_command_queue.cpp  icd_level_zero_api_device.cpp  icd_level_zero_api_driver.cpp  icd_level_zero_api_event.cpp  icd_level_zero_api_event_pool.cpp  icd_level_zero_api_fence.cpp  icd_level_zero_api_kernel.cpp  icd_level_zero_api_memory.cpp  icd_level_zero_api_memory_experimental.cpp  icd_level_zero_api_module.cpp  icd_level_zero_api_pnext_translation.cpp  icd_level_zero_api_sysman.cpp  icd_level_zero_api_sysman.h  icd_level_zero_ipc_helpers.h
icd/level_zero/api_type_wrapper/: device_wrapper.cpp  device_wrapper.h  handles_definitions.h  kernel_wrapper.h  module_wrapper.cpp  module_wrapper.h  wrapper_base.h
icd/level_zero/logic/: hostptr_copies_reader.cpp  hostptr_copies_reader.h  imported_host_pointers_manager.cpp  imported_host_pointers_manager.h  properties_cache.h  struct_traits.h  types_printer.h
scripts/: CMakeLists.txt  cal.icd  generate_ninja_test_file.sh  run_l0_blackbox_tests.sh
scripts/packaging/aggregation_layer/: aggregation_layer.sh  build_aggregation_layer_deb.sh  build_aggregation_layer_rpm.sh  cal_setvars.sh  cal_setvars_l0.sh  cal_setvars_ocl.sh
service/: CMakeLists.txt  cochoreographer.cpp  cochoreographer.h  main.cpp  register_all_generated_handlers.cpp  service.cpp  service.h  service_drm_ioctl.h  service_ext.cpp  service_malloc_override.cpp  service_malloc_override.h
service/level_zero/: CMakeLists.txt  artificial_events_allocator.cpp  artificial_events_allocator.h  artificial_events_manager.cpp  artificial_events_manager.h  command_list_to_context_tracker.cpp  command_list_to_context_tracker.h  context_mappings_tracker.cpp  context_mappings_tracker.h  event_to_context_tracker.cpp  event_to_context_tracker.h  l0_shared_objects.cpp  l0_shared_objects.h  ongoing_hostptr_copies_manager.cpp  ongoing_hostptr_copies_manager.h
test/level_zero/: CMakeLists.txt  l0_blackbox_append_mem_fill_copy_immediate_synchronous.cpp  l0_blackbox_context.cpp  l0_blackbox_device.cpp  l0_blackbox_driver.cpp  l0_blackbox_event.cpp  l0_blackbox_experimental_memory.cpp  l0_blackbox_fence.cpp  l0_blackbox_memory.cpp  l0_test_basic.cpp  l0_ult_icd.cpp  l0_ult_rpc.cpp
test/level_zero/blackbox/: CMakeLists.txt  l0_blackbox_append_mem_copy_from_context_deferred.cpp  l0_blackbox_append_mem_copy_from_context_immediate.cpp  l0_blackbox_append_mem_copy_region_deferred.cpp  l0_blackbox_append_mem_copy_region_immediate.cpp  l0_blackbox_append_mem_fill_copy_asynchronous_queue.cpp  l0_blackbox_append_mem_fill_copy_immediate_asynchronous.cpp  l0_blackbox_append_mem_fill_copy_immediate_synchronous.cpp  l0_blackbox_append_mem_fill_copy_resubmit.cpp  l0_blackbox_append_mem_fill_copy_synchronous.cpp  l0_blackbox_append_memory_ranges_barrier.cpp  l0_blackbox_context.cpp  l0_blackbox_device.cpp  l0_blackbox_driver.cpp  l0_blackbox_dynamic_link.cpp  l0_blackbox_event.cpp  l0_blackbox_experimental_memory.cpp  l0_blackbox_fence.cpp  l0_blackbox_image.cpp  l0_blackbox_malloc_override.cpp  l0_blackbox_memory.cpp  l0_blackbox_metrics.cpp  l0_blackbox_module_and_kernel.cpp  l0_blackbox_module_create_via_extension.cpp  l0_blackbox_runner_configs.yml  l0_blackbox_sysman.cpp
test/level_zero/service/: CMakeLists.txt  l0_service_ult_main.cpp  test_artificial_events_allocator.cpp  test_artificial_events_manager.cpp  test_command_list_to_context_tracker.cpp  test_context_mappings_tracker.cpp  test_event_to_context_tracker.cpp  test_ongoing_hostrptr_copies_manager.cpp
test/ocl/: CMakeLists.txt  ocl_parallel_copy.cpp  ocl_staging_area.cpp  ocl_test_basic.cpp  ocl_test_usm.cpp  ocl_ult_icd.cpp  ocl_use_host_ptr.cpp
test/shared/: CMakeLists.txt  allocators_ult.cpp  memory_block_ult.cpp  ref_counted_ult.cpp  rpc_ult.cpp  shared_ult_main.cpp  shmem_ult.cpp  staging_area_manager_ult.cpp  usm_ult.cpp  utils_ult.cpp
(+68 files in other folders)
